--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -73,8 +73,8 @@
   name = "golang.org/x/sys"
 
 [[constraint]]
-    branch = "master"
-    name = "github.com/neverhook/easygo"
+  branch = "master"
+  name = "github.com/neverhook/easygo"
 
 [[constraint]]
   branch = "master"
@@ -95,3 +95,7 @@
 [[constraint]]
   name = "github.com/opentracing/opentracing-go"
   version = "1.0.2"
+
+[[constraint]]
+  name = "github.com/prometheus/client_golang"
+  version = "v0.9.2"
