--- a/examples/codes/http-sample/config.json
+++ b/examples/codes/http-sample/config.json
@@ -100,5 +100,13 @@
 	  ]
 	}
      ]
+  },
+  "admin": {
+    "address": {
+      "socket_address": {
+        "address": "0.0.0.0",
+        "port_value": 34901
+      }
+    }
   }
 }
