--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@
 
 [[constraint]]
   name = "github.com/envoyproxy/go-control-plane"
-  version = "=0.4.0"
+  version = "=0.6.3"
 
 [[constraint]]
   name = "github.com/gogo/protobuf"
@@ -38,7 +38,7 @@
 
 [[constraint]]
   name = "github.com/hashicorp/go-syslog"
-  version = "=v1.0.0"
+  version = "v1.0.0"
 
 [[constraint]]
   branch = "master"
@@ -46,24 +46,24 @@
 
 [[constraint]]
   name = "github.com/urfave/cli"
-  version = "=1.20.0"
+  version = "1.20.0"
 
 [[constraint]]
   name = "google.golang.org/grpc"
-  version = "=1.20.1"
+  version = "1.11.1"
 
 [[constraint]]
   name = "gopkg.in/natefinch/lumberjack.v2"
-  version = "=v2.1"
+  version = "2.1.0"
 
 
 [[constraint]]
   name = "github.com/valyala/fasthttp"
-  version = "=v1.2.0"
+  version = "v1.2.0"
 
 [[constraint]]
   name = "github.com/json-iterator/go"
-  version = "=v1.1.6"
+  version = "v1.1.6"
 
 [[constraint]]
   branch = "master"
@@ -79,7 +79,7 @@
 
 [[constraint]]
   name = "istio.io/api"
-  version = "=1.1.3"
+  version = "1.1.4"
 
 [prune]
   go-tests = true
@@ -87,7 +87,7 @@
 
 [[constraint]]
   name = "github.com/prometheus/client_golang"
-  version = "=v0.9.2"
+  version = "v0.9.2"
 
 [[constraint]]
   name = "github.com/c2h5oh/datasize"
