--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -100,3 +100,7 @@
 [[constraint]]
   name = "github.com/spf13/pflag"
   version = "v1.0.3"
+
+[[constraint]]
+  name = "github.com/tjfoc/gmsm"
+  version = "1.2.0"
