fix mosn example image

--- a/etc/supervisor/mosn.conf
+++ b/etc/supervisor/mosn.conf
@@ -1,5 +1,5 @@
 [program:mosn]
-command=mosnd start -c /home/admin/mosn/conf/mosn.conf
+command=/home/admin/mosn/bin/mosn start -c /home/admin/mosn/conf/mosn_config.json
 user=admin
 startsecs=1
 autostart=true
