--- a/configs/mosn_config.json
+++ b/configs/mosn_config.json
@@ -122,7 +122,7 @@
           "log_level": "DEBUG",
           "access_logs": [
             {
-              "log_path": "./access_ingress.log",
+              "log_path": "/home/admin/mosn/logs/access_ingress.log",
               "log_format": "%StartTime% %RequestReceivedDuration% %ResponseReceivedDuration% %REQ.requestid% %REQ.cmdcode% %RESP.requestid% %RESP.service%"
             }
           ]
