--- a/examples/codes/http-sample/config.json
+++ b/examples/codes/http-sample/config.json
@@ -96,7 +96,7 @@
 	"admin": {
 		"address": {
 			"socket_address": {
-				address": "0.0.0.0",
+				"address": "0.0.0.0",
 				"port_value": 34901
 			}
 		}
