--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,40 @@
-./build/ci/.travis.yml
+dist: trusty
+sudo: required
+
+language: go
+go:
+  - 1.12.7
+
+services:
+  - docker
+
+jobs:
+  include:
+    - stage: test
+      script: make coverage
+    - stage: integrate
+      script: make integrate
+    - stage: build
+      script: make build
+#    - stage: deploy
+#    - stage: release
+
+
+stages:
+  - name: test
+  - name: integrate
+  - name: build
+#    if: branch = master
+#  - name: deploy
+#    if: branch = master
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+notifications:
+  email:
+    - junxiong.sjx@antfin.com
+    - lingtao.klt@antfin.com
+    - linzhengchun.lzc@alibaba-inc.com
+    - xiaojian.aoxiaojia@antfin.com
+    - xiaodong.dxd@antfin.com
