--- a/examples/codes/filter/commonrule/config.json
+++ b/examples/codes/filter/commonrule/config.json
@@ -1,97 +1,78 @@
 {
-  "servers": [
+  "servers":[
     {
-      "default_log_path": "stdout",
-      "listeners": [
+      "default_log_path":"stdout",
+      "listeners":[
         {
-          "name": "serverListener",
+          "name":"serverListener",
           "address": "127.0.0.1:2046",
           "bind_port": true,
           "log_path": "stdout",
-          "filter_chains": [
-            {
-              "tls_context": {},
-              "filters": [
-                {
-                  "type": "proxy",
-                  "config": {
-                    "downstream_protocol": "Http2",
-                    "upstream_protocol": "X",
-                    "router_config_name": "server_router"
-                  }
-                },
-                {
-                  "type": "connection_manager",
-                  "config": {
-                    "router_config_name": "server_router",
-                    "virtual_hosts": [
+          "filter_chains": [{
+            "tls_context":{},
+            "filters": [
+              {
+                "type": "proxy",
+                "config": {
+                  "downstream_protocol": "Http2",
+                  "upstream_protocol": "Http1",
+                  "router_config_name":"server_router"
+
+                }
+              },
+              {
+                "type":"connection_manager",
+                "config":{
+                  "router_config_name":"server_router",
+                  "virtual_hosts":[{
+                    "name":"serverHost",
+                    "domains": ["*"],
+                    "routers": [
                       {
-                        "name": "serverHost",
-                        "domains": [
-                          "*"
-                        ],
-                        "routers": [
-                          {
-                            "match": {
-                              "prefix": "/"
-                            },
-                            "route": {
-                              "cluster_name": "serverCluster"
-                            }
-                          }
-                        ]
+                        "match":{"prefix":"/"},
+                        "route":{"cluster_name":"serverCluster"}
                       }
                     ]
-                  }
+                  }]
+
                 }
-              ]
-            }
-          ]
+              }]
+          }]
         },
         {
-          "name": "clientListener",
+          "name":"clientListener",
           "address": "127.0.0.1:2045",
           "bind_port": true,
           "log_path": "stdout",
-          "filter_chains": [
-            {
-              "tls_context": {},
-              "filters": [
-                {
-                  "type": "proxy",
-                  "config": {
-                    "downstream_protocol": "Http1",
-                    "upstream_protocol": "Http2",
-                    "router_config_name": "client_router"
-                  }
-                },
-                {
-                  "type": "connection_manager",
-                  "config": {
-                    "router_config_name": "client_router",
-                    "virtual_hosts": [
+          "filter_chains": [{
+            "tls_context":{},
+            "filters": [
+              {
+                "type": "proxy",
+                "config": {
+                  "downstream_protocol": "Http1",
+                  "upstream_protocol": "Http2",
+                  "router_config_name":"client_router"
+                }
+              },
+              {
+                "type":"connection_manager",
+                "config":{
+                  "router_config_name":"client_router",
+                  "virtual_hosts":[{
+                    "name":"clientHost",
+                    "domains": ["*"],
+                    "routers": [
                       {
-                        "name": "clientHost",
-                        "domains": [
-                          "*"
-                        ],
-                        "routers": [
-                          {
-                            "match": {
-                              "prefix": "/"
-                            },
-                            "route": {
-                              "cluster_name": "clientCluster"
-                            }
-                          }
-                        ]
+                        "match":{"prefix":"/"},
+                        "route":{"cluster_name":"clientCluster"}
                       }
                     ]
-                  }
+                  }]
                 }
-              ]
-            }
-          ],
+              }
+            ]
+          }],
           "stream_filters": [
             {
               "type": "commonrule",
@@ -141,18 +122,16 @@
       ]
     }
   ],
-  "cluster_manager": {
-    "clusters": [
+  "cluster_manager":{
+    "clusters":[
       {
-        "Name": "serverCluster",
+        "Name":"serverCluster",
         "type": "SIMPLE",
         "lb_type": "LB_RANDOM",
         "max_request_per_conn": 1024,
-        "conn_buffer_limit_bytes": 32768,
-        "hosts": [
-          {
-            "address": "127.0.0.1:8080"
-          }
+        "conn_buffer_limit_bytes":32768,
+        "hosts":[
+          {"address":"127.0.0.1:8080"}
         ]
       },
       {
@@ -160,11 +139,9 @@
         "type": "SIMPLE",
         "lb_type": "LB_RANDOM",
         "max_request_per_conn": 1024,
-        "conn_buffer_limit_bytes": 32768,
-        "hosts": [
-          {
-            "address": "127.0.0.1:2046"
-          }
+        "conn_buffer_limit_bytes":32768,
+        "hosts":[
+          {"address":"127.0.0.1:2046"}
         ]
       }
     ]
