--- a/examples/codes/trace/skywalking/http/config.json
+++ b/examples/codes/trace/skywalking/http/config.json
@@ -58,7 +58,7 @@
         "conn_buffer_limit_bytes": 32768,
         "hosts": [
           {
-            "address": "127.0.0.1:8080"
+            "address": "127.0.0.1:8081"
           }
         ]
       }
@@ -69,8 +69,9 @@
     "driver": "SkyWalking",
     "tracer": "SkyWalking",
     "config": {
-      "reporter": "log",
-      "service_name": "mosn",
+      "reporter": "gRPC",
+      "backend_service": "127.0.0.1:11800",
+      "service_name": "MOSN",
       "with_register": true
     }
   },
