--- a/examples/codes/dubbo/xds/mosn/dubbo_config.json
+++ b/examples/codes/dubbo/xds/mosn/dubbo_config.json
@@ -163,7 +163,7 @@
 				"hosts": [
 					{
 						"socket_address": {
-							"address": "istio-pilot.istio-system",
+							"address": "istiod.istio-system.svc",
 							"port_value": 15010
 						}
 					}
