--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -11,3 +11,4 @@ jobs:
         uses: reviewdog/action-golangci-lint@v1
         with:
           golangci_lint_flags: "--enable-all --exclude-use-default=false"
+          workdir: pkg
