--- a/configs/mosn_config_mirror.json
+++ b/configs/mosn_config_mirror.json
@@ -2,7 +2,7 @@
 	"servers": [
 		{
 			"default_log_path": "stdout",
-			"default_log_level": "INFO",
+			"default_log_level": "DEBUG",
 			"listeners": [
 				{
 					"name": "egress_dubbo",
@@ -30,39 +30,61 @@
 						{
 							"type": "mirror",
 							"config": {
-								"amplification": 100
+								"amplification": 10
 							}
 						}
 					]
-				}
-			],
-			"routers": [
+				},
 				{
-					"router_config_name": "dubbo_provider_router",
-					"virtual_hosts": [
+					"name": "http1",
+					"address": "0.0.0.0:8081",
+					"bind_port": true,
+					"filter_chains": [
 						{
-							"name": "provider",
-							"domains": [
-								"*"
-							],
-							"routers": [
+							"tls_context": {},
+							"filters": [
 								{
-									"match": {
-										"headers": [
-											{
-												"name": "service",
-												"value": ".*"
-											}
-										]
-									},
-									"route": {
-										"cluster_name": "dubbo_provider_cluster"
+									"type": "proxy",
+									"config": {
+										"downstream_protocol": "Http1",
+										"upstream_protocol": "Http1",
+										"router_config_name": "8080"
 									}
 								}
 							]
 						}
 					]
 				},
+				{
+					"name": "http2",
+					"address": "0.0.0.0:8082",
+					"bind_port": true,
+					"filter_chains": [
+						{
+							"tls_context": {},
+							"filters": [
+								{
+									"type": "proxy",
+									"config": {
+										"downstream_protocol": "Http1",
+										"upstream_protocol": "Http2",
+										"router_config_name": "18080"
+									}
+								}
+							]
+						}
+					],
+					"stream_filters": [
+						{
+							"type": "mirror",
+							"config": {
+								"amplification": 10
+							}
+						}
+					]
+				}
+			],
+			"routers": [
 				{
 					"router_config_name": "20882",
 					"virtual_hosts": [
@@ -85,7 +107,63 @@
 										"cluster_name": "dubbo_provider_cluster"
 									},
 									"request_mirror_policies": {
-										"cluster": "mirror",
+										"cluster": "dubbo_mirror",
+										"fractional_percent": {
+											"numberator": 100,
+											"denominator_num": 100
+										}
+									}
+								}
+							]
+						}
+					]
+				},
+				{
+					"router_config_name": "8080",
+					"virtual_hosts": [
+						{
+							"name": "http1",
+							"domains": [
+								"*"
+							],
+							"routers": [
+								{
+									"match": {
+										"prefix": "/"
+									},
+									"route": {
+										"cluster_name": "http1"
+									},
+									"request_mirror_policies": {
+										"cluster": "http1_mirror",
+										"fractional_percent": {
+											"numberator": 100,
+											"denominator_num": 100
+										}
+									}
+								}
+							]
+						}
+					]
+				},
+				{
+					"router_config_name": "18080",
+					"virtual_hosts": [
+						{
+							"name": "http1",
+							"domains": [
+								"*"
+							],
+							"routers": [
+								{
+									"match": {
+										"prefix": "/"
+									},
+									"route": {
+										"cluster_name": "http2"
+									},
+									"request_mirror_policies": {
+										"cluster": "http2_mirror",
 										"fractional_percent": {
 											"numberator": 100,
 											"denominator_num": 100
@@ -114,7 +192,7 @@
 				]
 			},
 			{
-				"Name": "mirror",
+				"Name": "dubbo_mirror",
 				"type": "SIMPLE",
 				"lb_type": "LB_RANDOM",
 				"max_request_per_conn": 1024,
@@ -122,6 +200,54 @@
 				"hosts": [
 					{
 						"address": "127.0.0.1:20883"
+					}
+				]
+			},
+			{
+				"Name": "http1",
+				"type": "SIMPLE",
+				"lb_type": "LB_RANDOM",
+				"max_request_per_conn": 1024,
+				"conn_buffer_limit_bytes": 32768,
+				"hosts": [
+					{
+						"address": "127.0.0.1:8080"
+					}
+				]
+			},
+			{
+				"Name": "http1_mirror",
+				"type": "SIMPLE",
+				"lb_type": "LB_RANDOM",
+				"max_request_per_conn": 1024,
+				"conn_buffer_limit_bytes": 32768,
+				"hosts": [
+					{
+						"address": "127.0.0.1:9090"
+					}
+				]
+			},
+			{
+				"Name": "http2",
+				"type": "SIMPLE",
+				"lb_type": "LB_RANDOM",
+				"max_request_per_conn": 1024,
+				"conn_buffer_limit_bytes": 32768,
+				"hosts": [
+					{
+						"address": "127.0.0.1:18080"
+					}
+				]
+			},
+			{
+				"Name": "http2_mirror",
+				"type": "SIMPLE",
+				"lb_type": "LB_RANDOM",
+				"max_request_per_conn": 1024,
+				"conn_buffer_limit_bytes": 32768,
+				"hosts": [
+					{
+						"address": "127.0.0.1:19090"
 					}
 				]
 			}
