reduce http1 connect

--- a/configs/mosn_config_mirror.json
+++ b/configs/mosn_config_mirror.json
@@ -53,6 +53,14 @@
 								}
 							]
 						}
+					],
+					"stream_filters": [
+						{
+							"type": "mirror",
+							"config": {
+								"amplification": 10
+							}
+						}
 					]
 				},
 				{
