fix udp_proxy examples

--- a/examples/codes/udpproxy-sample/config.json
+++ b/examples/codes/udpproxy-sample/config.json
@@ -15,12 +15,8 @@
               "filters": [
                 {
                   "config": {
-                    "cluster": "serverCluster",
-                    "routes": [
-                      {
-                        "cluster": "serverCluster"
-                      }
-                    ]
+                    "type": "udp_proxy",
+                    "cluster": "serverCluster"
                   }
                 }
               ]
