--- a/examples/codes/sofarpc-with-xprotocol-sample/tls_client_config.json
+++ b/examples/codes/sofarpc-with-xprotocol-sample/tls_client_config.json
@@ -1,4 +1,5 @@
 {
+	"close_graceful": true,
 	"servers":[
 		{
 			"default_log_path":"stdout",
@@ -15,7 +16,6 @@
 							}
 						]
 					}]
-
 				}
 			],
 			"listeners":[
