--- a/examples/codes/uds-sample/client_config.json
+++ b/examples/codes/uds-sample/client_config.json
@@ -4,53 +4,26 @@
     {
       "default_log_path": "stdout",
       "default_log_level": "DEBUG",
-      "routers": [
-        {
-          "router_config_name": "client_router",
-          "virtual_hosts": [
-            {
-              "name": "clientHost",
-              "domains": [
-                "*"
-              ],
-              "routers": [
-                {
-                  "match": {
-                    "headers": [
-                      {
-                        "name": "service",
-                        "value": ".*"
-                      }
-                    ]
-                  },
-                  "route": {
-                    "cluster_name": "clientCluster"
-                  }
-                }
-              ]
-            }
-          ]
-        }
-      ],
       "listeners": [
         {
           "name": "clientListener",
-          "address": "0.0.0.0:2045",
+          "address": "/tmp/client-proxy.sock",
           "bind_port": true,
           "log_path": "stdout",
+          "network": "unix",
           "filter_chains": [
             {
               "tls_context": {},
               "filters": [
                 {
-                  "type": "proxy",
+                  "type": "tcp_proxy",
                   "config": {
-                    "downstream_protocol": "X",
-                    "upstream_protocol": "X",
-                    "router_config_name": "client_router",
-                    "extend_config": {
-                      "sub_protocol": "dubbo"
-                    }
+                    "cluster": "clientCluster",
+                    "routes": [
+                      {
+                        "cluster": "clientCluster"
+                      }
+                    ]
                   }
                 }
               ]
