--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Run Unit tests.
-        run: make test-coverage
+        run: make coverage
 
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v1.0.0
