--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v1
         with:
+          token: ${{ secrets.CODECOV_SECRET }}
           file: ./coverage.txt
           
           
