--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -33,9 +33,9 @@ jobs:
         run: make coverage
 
       - name: Upload Coverage report to CodeCov
-        uses: codecov/codecov-action@v1.0.13
+        uses: codecov/codecov-action@v1
         with:
-          token: a82c6fa7-3bd6-436d-b430-cc0b670a0794
+          token: ${{ secrets.CODECOV_SECRET }}
           file: ./coverage.txt
           
           
