fix codecov token

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload Coverage report to CodeCov
         uses: codecov/codecov-action@v1.0.13
         with:
-          token: a82c6fa7-3bd6-436d-b430-cc0b670a0794
+          token: ${{CODECOV_TOKEN}}
           file: ./coverage.txt
           
           
