--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -32,12 +32,11 @@ jobs:
       - name: Run Unit tests.
         run: make coverage
 
-      - name: Upload Coverage report to CodeCov
-        uses: codecov/codecov-action@v1
+      - name: Coverage
+        run: bash <(curl -s https://codecov.io/bash)
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV.TOKEN}}
           file: ./coverage.txt
-          
           
   integrate:
     name: integrate
