--- a/examples/codes/sofarpc-with-xprotocol-sample/tls_server_config.json
+++ b/examples/codes/sofarpc-with-xprotocol-sample/tls_server_config.json
@@ -25,12 +25,12 @@
 					"bind_port": true,
 					"filter_chains": [{
 						"tls_context": {
-							"status": false,
+							"status": true,
 							"ca_cert": "../certs/ca.pem",
 							"cert_chain": "../certs/cert.pem",
 							"private_key": "../certs/key.pem",
-							"verify_client": false,
-							"require_client_cert": false
+							"verify_client": true,
+							"require_client_cert": true
 						},
 						"filters": [
 							{
