--- a/examples/codes/sofarpc-with-xprotocol-sample/tls_server_config.json
+++ b/examples/codes/sofarpc-with-xprotocol-sample/tls_server_config.json
@@ -25,7 +25,7 @@
 					"bind_port": true,
 					"filter_chains": [{
 						"tls_context": {
-							"status": true,
+							"status": false,
 							"ca_cert": "../certs/ca.pem",
 							"cert_chain": "../certs/cert.pem",
 							"private_key": "../certs/key.pem",
